--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"@fontsource-variable/biorhyme": "^5.1.0",
+		"@fontsource-variable/libre-franklin": "^5.1.1"
 	}
 }
