--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@fontsource-variable/biorhyme": "^5.1.0",
+		"@fontsource-variable/libre-franklin": "^5.1.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"sass-embedded": "^1.80.4",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
-		"@fontsource-variable/biorhyme": "^5.1.0",
-		"@fontsource-variable/libre-franklin": "^5.1.1"
+		"vite": "^5.0.3"
 	}
 }
