--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@fontsource-variable/biorhyme": "^5.1.0",
 		"@fontsource-variable/libre-franklin": "^5.1.1",
+		"@poppanator/sveltekit-svg": "^5.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
