--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"@fontsource-variable/libre-franklin": "^5.1.1",
 		"@poppanator/sveltekit-svg": "^5.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.6",
+		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"sass-embedded": "^1.80.4",
