Redirect Firebase Hosting to self-host
This commit changes firebase.json to redirect all the traffic to my self-hosted version of the site hosted

--- a/firebase.json
+++ b/firebase.json
@@ -6,10 +6,11 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
+    "redirects": [
       {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "https://calisti.ddnsfree.com",
+        "type": 301
       }
     ]
   }
