--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Deploy to Firebase Hosting
+name: Build svelte app
 
 on:
   push:
@@ -22,11 +22,3 @@ jobs:
 
       - name: build
         run: npm run build
-
-      - name: Deploy to Firebase Hosting
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_LCALISTI }}'
-          channelId: live
-          projectId: lcalisti
