--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   server:
     build:
       context: .
+    pull_policy: build
     container_name: portfolio
     restart: always
     environment:
